# asmgen

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: reuse.yml
LICENSES/: MIT.txt
examples/: asm_func.py  asm_stream.py  rvv-lmul.py  rvv_lmul.py
src/asmgen/: asmdata.py  emulation.py  registers.py  util.py
src/asmgen/asmblocks/: __init__.py  aarch64.py  avx_fma.py  neon.py  noarch.py  operations.py  riscv64.py  rvv.py  rvv071.py  sme.py  sve.py
src/asmgen/asmblocks/aarch64_opd3/: __init__.py  aarch64_simd_opd3_base.py
src/asmgen/asmblocks/aarch64_opdna1/: __init__.py  aarch64_load.py  aarch64_opdna1_base.py  aarch64_store.py  signatures.py
src/asmgen/asmblocks/avx_opd3/: __init__.py  avx_fadd.py  avx_fma.py  avx_fmul.py  avx_fsub.py  avx_opd3_base.py  signatures.py
src/asmgen/asmblocks/avx_opdna1/: __init__.py  avx_load.py  avx_opdna1_base.py  avx_store.py  signatures.py
src/asmgen/asmblocks/neon_opd3/: __init__.py  neon_fadd.py  neon_fma.py  neon_fmul.py  neon_fsub.py  neon_opd3_base.py  signatures.py
src/asmgen/asmblocks/neon_opdna1/: __init__.py  (+4 more)
src/asmgen/benchmark/: __init__.py  extra_sources.py
src/asmgen/callconv/: callconv.py  fngen.py
src/asmgen/compilation/: compiler_presets.py  tools.py
src/asmgen/cppgen/: analyzers.py  checkers.py  declarations.py  expressions.py  templates.py  types.py  writers.py
src/asmgen/emulation/: emulation.py
src/asmgen/state_machine/: conditions.py  sm.py
tests/: __init__.py  asm_test_generator.py  test_asm_correct.py  test_asm_implemented.py  test_callconv.py  test_cpp_writers.py  test_opdna1.py  test_sm.py  testcase.py
tests/generators/: greg.py  vec.py
tests/opd3/: __init__.py
tests/opd3/avx/: __init__.py  test_avx_opd3.py  test_fmla.py  test_fmul.py
tests/opd3/neon/: __init__.py  test_fadd.py  test_fmla.py  test_fmul.py  test_neon_opd3.py
tests/opd3/rvv/: __init__.py  test_fmla.py  test_opd3.py
tests/opd3/sme/: __init__.py  test_fopa.py
tests/opd3/sve/: __init__.py  test_fadd.py  test_fmla.py  test_fmul.py  test_sve_opd3.py
tests/opdna1/aarch64/: __init__.py  test_ldst.py
tests/opdna1/avx/: __init__.py  test_ldst.py
tests/opdna1/neon/: __init__.py  test_ldst.py
tests/opdna1/riscv64/: __init__.py  test_ldst.py  test_load.py  test_store.py
tests/opdna1/rvv/: __init__.py  test_ldst.py  test_load.py  test_store.py
tests/opdna1/sme/: __init__.py  test_ldst.py
tests/opdna1/sve/: __init__.py  test_ldst.py
tests/opdna1/x86_64/: __init__.py  test_ldst.py
tests/operation/: test_constraints.py
(+63 files in other folders)
