[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asmgen"
version = "0.1.1"
authors = [
  { name="linedot", email="linedot@linedot.org" },
]
description = "Assembly Generation tool for AVX/FMA, AVX2, AVX512, ARM NEON, ARM SVE, RISCV RVV"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "Mako"
]
[project.optional-dependencies]
test = [ 
    "parameterized"
]

[project.urls]
Homepage = "https://github.com/linedot/asmgen"
Issues = "https://github.com/linedot/asmgen/issues"
